# rust-csv-txn-parser

./: Cargo.toml  README.md
src/: main.rs  model.rs  processor.rs  utils.rs
src/test_csv_data/: test_dispute_withdrawal_chargeback.csv  test_dispute_withdrawal_resolve.csv
src/transaction_test_data/: test_chargeback_no_dispute.csv  test_data_dispute_resolve.csv  test_data_early_lock.csv  test_dispute_chargeback_after_resolve.csv  test_dispute_withdrawal.csv  test_locked.csv  test_over_withdrawal.csv  test_resolve_no_dispute.csv
