[package]
name = "csv-txn-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
dashmap = "6.1.0"
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
num_cpus = "1.17.0"
crossbeam-channel = "0.5.15"
threadpool = "1.8.1"
